--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "browser-detect": "^0.2.28",
         "fastclick": "1.x",
         "inputmask": "^5.0.3",
+        "ion-rangeslider": "^2.3.1",
         "jquery": "3.x",
         "lazysizes": "5.x",
         "svg4everybody": "2.x",
